Fixed OL numbers not showing on Safari, css tweaks, and Edits to blog posts

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -18,11 +18,11 @@ body {
   font-size: 16px;
   line-height: 1.3;
 }
-@media (max-width: 480px) {
+/* @media (max-width: 480px) {
   html {
     font-size: 15px;
   }
-}
+} */
 
 a {
   text-decoration: underline;
